docs(p0-d): 构建手册 + 差分夹具手册 + P0 验收台账 + 测试服部署清单
P0-D 交付（只写 docs/，不碰构建与代码文件）：

- docs/CAVA-build.md（新建）：本机实测的构建手册。
  * 工具链全路径表（JDK 21 / CMake 3.31.2 / MinGW g++ 15.2.0 / MSBuild 17.14 / node 22）
  * GRADLE_USER_HOME 必须在工作区内 + 从外部缓存拷贝 gradle 发行包免下载（实测 exit 0）
  * CMake MinGW 实测通过（缺 CMAKE_MAKE_PROGRAM 会失败）；MSVC 两个坑（/O2 与 /RTC1 探针冲突、检查结果有缓存）
  * ctest 0xc0000135 根因 = MinGW 运行库不在 PATH；natives/<tag>/ 多流覆盖风险
  * Loom 1.18.x 要 JVM 25 → pin 1.17.20（归 P0-A）；problems-report.html 跨会话不可写
- docs/CAVA-parity-fixtures.md（新建）：三条采集通道逐条操作步骤（TIS /log movement、
  TIS /log microTiming、Carpet /log pathfinding、原版 /tick）+ 确定性前置条件 + contraption 语料库。
  字段/默认值/注入点全部标注来源（refmap / javap / lang / rules json / mappings.tiny）。
  纠正清单旧描述：Carpet 寻路 mixin 包的是 findPathTo(method_35142)，不是 createPath(6348/6349)。
- docs/CAVA-p0-acceptance.md（新建）：prompts/01 验收四条逐条状态 + 证据 + 回填所需证据 + 负责流。
  记录了架构级门（预览版 class 被 Fabric Loader 加载）已通过的原始日志。
- docs/CAVA-服务器模组清单.md（只追加 §7 测试服部署清单，162 行纯新增，未改已有内容）：
  加载器/原版服务端 URL 与版本实测、三档 33/8/4/4、server.properties 推荐值、EasyAuth 已登录落地、
  TIS 硬依赖 Carpet 的实测失败证据。